ingress_resource.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "ingress-resource"
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0" # remove restrictions on upload file size
spec:
  backend:
    serviceName: "webapp-frontend-service"
    servicePort: 8081
  rules:
  - http:
      paths:
      - backend:
          serviceName: "webapp-frontend-service"
          servicePort: 8081
    host: "www.socialdistancingcalculator.xyz"
